# cg-assignment-1

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  flake.nix
.github/workflows/: build.yml
docs/: Makefile  README.md  frontmatter.md
resources/: shader.fs  shader.vs
scripts/: convert-resources.sh  convert-shaders.sh
src/: Matrices.cpp  Matrices.hpp  Vectors.hpp  control.cpp  control.hpp  drawable.hpp  main.cpp  mathutils.hpp  matrix.cpp  matrix.hpp  model.cpp  model.hpp  prompt.cpp  prompt.hpp  resources.hpp  scene.cpp  scene.hpp  shader.cpp  shader.hpp  shaders.hpp  vector.hpp  window.cpp  window.hpp
src/transform/: mvp.cpp  mvp.hpp  ortho.hpp  perspective.cpp  perspective.hpp  projection.cpp  projection.hpp  rotate.cpp  rotate.hpp  rotation.hpp  scale.cpp  scale.hpp  transform.hpp  translate.cpp  translate.hpp  viewer.cpp  viewer.hpp
